settlement state update through rabbitmq
