# lib/db/models/Settlement.js
@@ -1,14 +1,17 @@
 const mongoose = require('mongoose')
 const Schema = mongoose.Schema
+const uuid = require('uuid/v4')
 
 const schema = new Schema({
-  messageId: { type: String },
-  status: { type: String },
-  userId:{ type: Schema.Types.ObjectId, ref: 'User' }
-
+  messageID: { type: String, default: uuid() },
+  status: { type: String, enum:['NEW', 'INPROGRESS', "FAILED", 'COMPLETED', 'DELETED', 'ARCHIVED'] },
+  userId:{ type: Schema.Types.ObjectId, ref: 'User' },
+  completedAt: {type: Date},
+  serverInfo:{type: Schema.Types.Mixed},
+  name: String
 }, { strict: false })
 
-schema.set('timestamps', { createdAt: 'created_at', updatedAt: 'updated_at' });
+schema.set('timestamps', { createdAt: 'createdAt', updatedAt: 'updatedAt' });
 schema.set('retainKeyOrder', true);
 
 const Settlement = mongoose.model('Settlement', schema)
