# lib/providers/validators/index.js
@@ -3,13 +3,15 @@ const logger = require('../../../logger').logger()
 const _upper = require('lodash').toUpper
 
 const baseSchema = Joi.object().keys({
-  messageId: Joi.string(),
-  userId: Joi.string().required(),
+  messageId: Joi.string().required(),
+  user: Joi.object().required(),
+  settlementId: Joi.string().required(),
   action: Joi.string().required(),
-  data: Joi.object().required()
+  settlements: Joi.array().required()
 })
 
 const createSchema = Joi.object().keys({
+  settlements: Joi.array(),
   provider: Joi.object({
     type: Joi.string().required(),
     config: Joi.object().required()
@@ -30,12 +32,13 @@ const validate = (message) => {
         return Joi.validate(message.data, deleteSchema)
         break
       case 'CREATE':
-        return Joi.validate(message.data, createSchema).then((data) => {
+        return r
+        /*return Joi.validate(message.data, createSchema).then((data) => {
           const providerObj = { config: message.data.provider.config }
           const providerType = message.data.provider.type
           const path = __dirname + `/schemas/${providerType}`
           return Joi.validate(providerObj, require(path).schema)
-        })
+        })*/
         break
     }
 
